--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -86,7 +86,7 @@ body
     <button class="button buttonc">Create New Account</button>
 </form>
         <div class="info">
-                   <b><a class="dev">Developed by:(Batch I)</a></b><br>
+                   <b><a class="dev">Developed by:(Batch I) CSE</a></b><br>
                    <a class="dev">Rahul Kushwaha [014]</a><br>
                    <a class="dev">Tanya Varshney [041]</a><br>
                    <a class="dev">Chirag Goel [004]</a>
